--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/Harrison-Reich/socialNetworkAPI/issues"
   },
-  "homepage": "https://github.com/Harrison-Reich/socialNetworkAPI#readme"
+  "homepage": "https://github.com/Harrison-Reich/socialNetworkAPI#readme",
+  "dependencies": {
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.7",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
+  }
 }
